Added ethnicities route
